--- a/_config.yml
+++ b/_config.yml
@@ -5,12 +5,12 @@
 # NOTE: it looks like you need to rebuild + repush everytime you update this _config.yml file
 
 ### Site Settings ###
-# title               : Sankalp Jain 
-# description         : >-
-#                      Hi I am Sankalp
+title               : Sankalp Jain 
+description         : >-
+                       Hi I am Sankalp
 
-title               :  Sankalp Jain 
-description         : Hi I am Sankalp!
+#title               :  Sankalp Jain 
+#description         : Hi I am Sankalp!
 baseurl             : ""   # Change to empty quotes if you are hosting your site at <your-username>.github.io directly,
 #                                             otherwise will be hosted at <your-username>.github.io/{{base_url}}
 repository          : sankalpjain63          # Change to <your-username>/<your-username>.github.io (or remove it if you don't need remote projects)
@@ -37,23 +37,22 @@ nav_exclude:                                            # The following paths ar
 
 ### Author Info ###
 author:
-
-  name              : Sankalp Jain
-  image             : https://media.licdn.com/dms/image/C4D03AQEHvrKTxixSsQ/profile-displayphoto-shrink_800_800/0/1654262638257?e=2147483647&v=beta&t=hDKhgqB6RM-2zRWbxg0-Vez8eiedHGg-7ni0e0mvGCM
+name              : Sankalp Jain
+image             : https://media.licdn.com/dms/image/C4D03AQEHvrKTxixSsQ/profile-displayphoto-shrink_800_800/0/1654262638257?e=2147483647&v=beta&t=hDKhgqB6RM-2zRWbxg0-Vez8eiedHGg-7ni0e0mvGCM
 #  behance           : your_username
 # dribbble          : your_username
 #  email             : username@domain.com
 #  facebook          : your_username
-  github            : sankalpjain63.github.io
+github            : sankalpjain63.github.io
 # gitlab            : your_username
 # instagram         : your_username
 # kaggle            : your_username
-  linkedin          : https://www.linkedin.com/in/sankalpjain81
-  github            : sankalpjain63
+linkedin          : https://www.linkedin.com/in/sankalpjain81
+github            : sankalpjain63
 # gitlab            : your_username
 # instagram         : your_username
 # kaggle            : your_username
- linkedin          : www.linkedin.com/in/sankalpjain81
+linkedin          : www.linkedin.com/in/sankalpjain81
 #  medium            : your_username
 # soundcloud        : your_username
 # spotify           : your_username
@@ -62,12 +61,11 @@ author:
 #  twitch            : your_username
 # twitter           : your_username
 #  vimeo             : your_username
-  youtube           : https://www.youtube.com/@lifewithsankalp
+youtube           : https://www.youtube.com/@lifewithsankalp
 # keybase           : your_username
 
 
-### Posts ###
-permalink: /blog/:title
+### Posts ###permalink: /blog/:title
 
 
 ### Collections ###
