--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 ### Site Settings ###
 title               : Sankalp Jain 
 description         : >-
-                       Hi I am Sankalp
+                       Hi, I am Sankalp!
 
 #title               :  Sankalp Jain 
 #description         : Hi I am Sankalp!
