--- a/_config.yml
+++ b/_config.yml
@@ -43,16 +43,16 @@ author:
 # dribbble          : your_username
 #  email             : username@domain.com
 #  facebook          : your_username
- github            : https://github.com/sankalpjain63/sankalpjain63.github.io
+ github            : sankalpjain63.github.io
 # gitlab            : your_username
 # instagram         : your_username
 # kaggle            : your_username
- linkedin          : https://www.linkedin.com/in/sankalpjain81
- github            : https://github.com/sankalpjain63/sankalpjain63.github.io
+ linkedin          : sankalpjain81
+ github            : sankalpjain63.github.io
 # gitlab            : your_username
 # instagram         : your_username
 # kaggle            : your_username
- linkedin          : https://www.linkedin.com/in/sankalpjain81
+ linkedin          : sankalpjain81
 #  medium            : your_username
 # soundcloud        : your_username
 # spotify           : your_username
@@ -61,7 +61,7 @@ author:
 #  twitch            : your_username
 # twitter           : your_username
 #  vimeo             : your_username
- youtube           : https://www.youtube.com/lifewithsankalp
+ youtube           : lifewithsankalp
 # keybase           : your_username
 
 
