--- a/_config.yml
+++ b/_config.yml
@@ -43,12 +43,12 @@ author:
 # dribbble          : your_username
 #  email             : username@domain.com
 #  facebook          : your_username
- github            : sankalpjain63/sankalpjain63.github.io
+ github            : github.io
 # gitlab            : your_username
 # instagram         : your_username
 # kaggle            : your_username
  linkedin          : sankalpjain81
- github            : sankalpjain63/sankalpjain63.github.io
+ github            : github.io
 # gitlab            : your_username
 # instagram         : your_username
 # kaggle            : your_username
