--- a/_config.yml
+++ b/_config.yml
@@ -61,7 +61,7 @@ author:
 #  twitch            : your_username
 # twitter           : your_username
 #  vimeo             : your_username
- youtube           : "lifewithsankalp"
+ youtube           : "@lifewithsankalp"
 # keybase           : your_username
 
 
