--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -1,11 +1,10 @@
-- title: AMAZING STUFF
-  from: 2019
+- title: Senior Consultant, Business Intelligence Group
+  from: "%May %2023"
   to: present
-  description: Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-               sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-               Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-               nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
-               reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+  description: •  Product Dev. Leading team of 5 consultants to provide strategy consulting to mobile carrier for launching digital healthcare service
+               •  Helping client establish business model for market entry & positioning; demonstrating ownership by client-communication process
+               •  Conducting primary and secondary research, drafting a project scoping document and analyzing data to provide recommendations
+
 
 - title: Student, Harvard CS
   from: 2013
