--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -19,7 +19,7 @@
 - title: Master of Science, Information Management
   from: 2022
   to: 2024
-  description: Coursework: Applied Business Research, Data Warehousing & Business Intelligence, Information Consulting, Data Visualization, etc.
+  description: "Coursework: Applied Business Research, Data Warehousing & Business Intelligence, Information Consulting, Data Visualization, etc."
 
   
 - title: System Engineer, Tata Consultancy Services
