--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -40,9 +40,14 @@
 - title: Business Analyst & Marketing Intern
   from: "June 2017"
   to: "July 2017"
-  description: A fast-growing, data-analytics-based ed-tech platform
-              task 1: • Pursued SWOT strategic opportunities for business organization. Leveraged product management strategies and used in-house database to produce visual data using Power BI to maximize sales
-              task 2: • Validated product fit & prioritization via A/B testing. Automated courses research fatigue, reducing 20% ongoing manual effort
-              task 3: • Utilized 4C’s to identify markets, products, services. Applied Six Sigma for structured problem-solving yielded productivity boost
+  tasks: 
+   - task 1: 
+     A fast-growing, data-analytics-based ed-tech platform
+   - task 2: 
+     • Pursued SWOT strategic opportunities for business organization. Leveraged product management strategies and used in-house database to produce visual data using Power BI to maximize sales
+   - task 3: 
+     • Validated product fit & prioritization via A/B testing. Automated courses research fatigue, reducing 20% ongoing manual effort
+   - task 4: 
+     • Utilized 4C’s to identify markets, products, services. Applied Six Sigma for structured problem-solving yielded productivity boost
                
 
