--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -41,13 +41,9 @@
   from: "June 2017"
   to: "July 2017"
   tasks: 
-   - task 1: 
-     A fast-growing, data-analytics-based ed-tech platform
-   - task 2: 
-     • Pursued SWOT strategic opportunities for business organization. Leveraged product management strategies and used in-house database to produce visual data using Power BI to maximize sales
-   - task 3: 
-     • Validated product fit & prioritization via A/B testing. Automated courses research fatigue, reducing 20% ongoing manual effort
-   - task 4: 
-     • Utilized 4C’s to identify markets, products, services. Applied Six Sigma for structured problem-solving yielded productivity boost
+   - task 1: A fast-growing, data-analytics-based ed-tech platform
+   - task 2: • Pursued SWOT strategic opportunities for business organization. Leveraged product management strategies and used in-house database to produce visual data using Power BI to maximize sales
+   - task 3: • Validated product fit & prioritization via A/B testing. Automated courses research fatigue, reducing 20% ongoing manual effort
+   - task 4: • Utilized 4C’s to identify markets, products, services. Applied Six Sigma for structured problem-solving yielded productivity boost
                
 
