--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -40,7 +40,7 @@
 - title: Business Analyst & Marketing Intern
   from: "June 2017"
   to: "July 2017"
-  tasks: 
+  descriptions: 
    - task 1: A fast-growing, data-analytics-based ed-tech platform
    - task 2: • Pursued SWOT strategic opportunities for business organization. Leveraged product management strategies and used in-house database to produce visual data using Power BI to maximize sales
    - task 3: • Validated product fit & prioritization via A/B testing. Automated courses research fatigue, reducing 20% ongoing manual effort
