--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -40,7 +40,7 @@
 - title: Business Analyst & Marketing Intern
   from: "June 2017"
   to: "July 2017"
-  descriptions:  A fast-growing, data-analytics-based ed-tech platform
+  description:  A fast-growing, data-analytics-based ed-tech platform
                  • Pursued SWOT strategic opportunities for business organization. Leveraged product management strategies and used in-house database to produce visual data using Power BI to maximize sales
                  • Validated product fit & prioritization via A/B testing. Automated courses research fatigue, reducing 20% ongoing manual effort
                  • Utilized 4C’s to identify markets, products, services. Applied Six Sigma for structured problem-solving yielded productivity boost
