--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -18,7 +18,7 @@
 - title: Master of Science, Information Management
   from: 2022
   to: 2024
-  description: "Coursework: Applied Business Research, Data Warehousing & Business Intelligence, Information Consulting, Data Visualization, etc."
+  description: "University of Illinois at Urbana-Champaign; Coursework: Applied Business Research, Data Warehousing & Business Intelligence, Information Consulting, Data Visualization, etc."
 
   
 - title: System Engineer, Tata Consultancy Services
@@ -43,5 +43,10 @@
                  • Pursued SWOT strategic opportunities for business organization. Leveraged product management strategies and used in-house database to produce visual data using Power BI to maximize sales
                  • Validated product fit & prioritization via A/B testing. Automated courses research fatigue, reducing 20% ongoing manual effort
                  • Utilized 4C’s to identify markets, products, services. Applied Six Sigma for structured problem-solving yielded productivity boost
+
+- title: Bachelor of Engineering, Computer Science and Engineering
+  from: "July 2016"
+  to: "June 2020"
+  description: "University Institute of Technology, RGPV;  Coursework: Software Engineering & Project Management, DBMS, Web Engineering, IoT, Cyber Security, Operating Systems"
                
 
