--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,10 @@
 title               : Sankalp Jain 
 description         : >-
                        Hi, I am Sankalp!
-
+                       I am a graduate student at the University of Illinois at Urbana-Champaign, 
+                       pursuing an MS in Information Management. 
+                       I have been a highly motivated and progress-focused computer science engineer, a product owner, and a senior consultant.
+                       Feel free to check About me, my projects, and blogs.
 #title               :  Sankalp Jain 
 #description         : Hi I am Sankalp!
 baseurl             : ""   # Change to empty quotes if you are hosting your site at <your-username>.github.io directly,
