--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ description         : >-
                        pursuing an MS in Information Management. 
                        
                        I have been a highly motivated and progress-focused computer science engineer, a product owner, and a senior consultant.
-                       Feel free to check About me, my projects, and blogs.
+                       Feel free to check about me, my projects, and blogs.
 #title               :  Sankalp Jain 
 #description         : Hi I am Sankalp!
 baseurl             : ""   # Change to empty quotes if you are hosting your site at <your-username>.github.io directly,
