--- a/_config.yml
+++ b/_config.yml
@@ -9,8 +9,8 @@ title               : Sankalp Jain
 description         : >-
                        Hi, I am Sankalp!
                        I am a graduate student at the University of Illinois at Urbana-Champaign, 
-                       pursuing an MS in Information Management.\n
-                       \n
+                       pursuing an MS in Information Management.
+                     
                        Feel free to check about me, my projects, and blogs.
 #title               :  Sankalp Jain 
 #description         : Hi I am Sankalp!
