--- a/_data/other-skills.yml
+++ b/_data/other-skills.yml
@@ -1,4 +1,5 @@
-- name: Methodologies - A/B testing, Agile, SDLC, Product/business strategy, Product Roadmap, Requirement gathering, Business Document, Six Sigma
+- name: Methodologies - 
+  A/B testing, Agile, SDLC, Product/business strategy, Product Roadmap, Requirement gathering, Business Document, Six Sigma
   percentage: 95
   level: Expert
   color: info
