--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -1,20 +1,17 @@
-- title: Senior Consultant, Business Intelligence Group
-  from: "August 2023"
-  to: present
-  description: |
-    • Product Development. Leading team of 5 consultants to provide strategy consulting to mobile carrier for launching digital healthcare service
-    • Helping client establish business model for market entry & positioning; demonstrating ownership by client-communication process
-    • Conducting primary and secondary research, drafting a project scoping document and analyzing data to provide recommendations
-
-
-- title: Product Owner Market Intelligence, Graybar
+- title: Product Owner, Graybar
   from: "May 2023"
   to: present
   description: •  Product Enhancement. Efficiently implemented Freight Cost Model using Snowflake & Power BI dashboard, enhancing gross margin & quote conversion ratio. Proactively predicted freight costs, saving Graybar 10% from initial $100 million
                •  Built KPIs-data accuracy, latency & feedback for Value Tracker product, suggested service strategies from 57 solutions for customers
                •  Developed a comprehensive Market Insights Report, identifying key trends and results for more than 2000 stakeholders
 
-
+- title: Senior Consultant, Business Intelligence Group
+  from: "August 2023"
+  to: "December 2023"
+  description:
+    • Product Development. Leading team of 5 consultants to provide strategy consulting to mobile carrier for launching digital healthcare service
+    • Helping client establish business model for market entry & positioning; demonstrating ownership by client-communication process
+    • Conducting primary and secondary research, drafting a project scoping document and analyzing data to provide recommendations
 
 - title: Master of Science, Information Management
   from: 2022
