--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -8,10 +8,9 @@
 - title: Senior Consultant, Business Intelligence Group
   from: "August 2023"
   to: "December 2023"
-  description:
-    • Product Development. Leading team of 5 consultants to provide strategy consulting to mobile carrier for launching digital healthcare service
-    • Helping client establish business model for market entry & positioning; demonstrating ownership by client-communication process
-    • Conducting primary and secondary research, drafting a project scoping document and analyzing data to provide recommendations
+  description: • Product Development. Leading team of 5 consultants to provide strategy consulting to mobile carrier for launching digital healthcare service
+               • Helping client establish business model for market entry & positioning; demonstrating ownership by client-communication process
+               • Conducting primary and secondary research, drafting a project scoping document and analyzing data to provide recommendations
 
 - title: :man_student: Master of Science, Information Management
   from: 2022
