--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -12,7 +12,7 @@
                • Helping client establish business model for market entry & positioning; demonstrating ownership by client-communication process
                • Conducting primary and secondary research, drafting a project scoping document and analyzing data to provide recommendations
 
-- title: :man_student: Master of Science, Information Management
+- title: Master of Science, Information Management
   from: 2022
   to: 2024
   description: "University of Illinois at Urbana-Champaign; Coursework: Applied Business Research, Data Warehousing & Business Intelligence, Information Consulting, Data Visualization, etc."
@@ -41,7 +41,7 @@
                  • Validated product fit & prioritization via A/B testing. Automated courses research fatigue, reducing 20% ongoing manual effort
                  • Utilized 4C’s to identify markets, products, services. Applied Six Sigma for structured problem-solving yielded productivity boost
 
-- title: :mortar_board: Bachelor of Engineering, Computer Science and Engineering
+- title: Bachelor of Engineering, Computer Science and Engineering
   from: "July 2016"
   to: "June 2020"
   description: "University Institute of Technology, RGPV;  Coursework: Software Engineering & Project Management, DBMS, Web Engineering, IoT, Cyber Security, Operating Systems"
