--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -1,9 +1,9 @@
 - title: Product Owner, Graybar
   from: "May 2023"
   to: present
-  description: •  Product Enhancement. Efficiently implemented Freight Cost Model using Snowflake & Power BI dashboard, enhancing gross margin & quote conversion ratio. Proactively predicted freight costs, saving Graybar 10% from initial $100 million
-               •  Built KPIs-data accuracy, latency & feedback for Value Tracker product, suggested service strategies from 57 solutions for customers
-               •  Developed a comprehensive Market Insights Report, identifying key trends and results for more than 2000 stakeholders
+  description1: •  Product Enhancement. Efficiently implemented Freight Cost Model using Snowflake & Power BI dashboard, enhancing gross margin & quote conversion ratio. Proactively predicted freight costs, saving Graybar 10% from initial $100 million
+  description2: •  Built KPIs-data accuracy, latency & feedback for Value Tracker product, suggested service strategies from 57 solutions for customers
+  description3: •  Developed a comprehensive Market Insights Report, identifying key trends and results for more than 2000 stakeholders
 
 - title: Senior Consultant, Business Intelligence Group
   from: "August 2023"
